--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,30 @@ a{
   text-decoration: none;
 }
 
+.slick-track {
+  display: flex!important;
+}
+.slick-track .slick-slide {
+  display: flex !important;
+  height: auto!important;
+  align-items: center!important;
+  justify-content: center!important;
+}
+
+.slick-prev:before {
+  background-image: url('https://i.imgur.com/9HKvcTi.png');
+  background-size: 25px 50px;
+  transform: rotate(180deg);
+  display: inline-block;
+  width: 25px; 
+  height: 50px;
+  content:""!important;
+}
+.slick-next:before {
+  background-image: url('https://i.imgur.com/9HKvcTi.png');
+  background-size: 25px 50px;
+  display: inline-block;
+  width: 25px; 
+  height: 50px;
+  content:""!important;
+}
