--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@900&family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
 body {
   margin: 0;
   display: flex;
@@ -9,7 +8,7 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F5F4F5;
+  background-color: white;
 }
 
 p{
@@ -44,5 +43,6 @@ a{
   display: inline-block;
   width: 25px; 
   height: 50px;
+  margin-left: -6px;
   content:""!important;
 }
